@@ -1,3 +1,8 @@
+2005-05-25 Hasso Tepper <hasso at quagga.net>
+
+	* bgpd.c: Fix obvious (routeserver patch) merge error. This makes "no
+	  neighbor x.x.x.x routemap [export|import] commands work again.
+
 2005-05-23 Paul Jakma <paul@dishone.st>
 
 	* bgp_routemap.c: add semi-colons to VTY_GET_* to match vty.h change
